--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   <section class="mvv">
     <div class="mvv__bg" style="background-image:url('assets/bgmvv.webp');"></div>
 
-    <div class="container mvv__cards">
+    <div class=" mvv__cards">
       <article class="mvv-card">
         <img src="assets/missao.webp" alt="missão blue"/>
         <h4>Missão Blue</h4>
