--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <!-- Thumb de vídeo ilustrativa -->
       <a class="video-thumb" aria-label="Assistir vídeo">
-        <img src="assets/bgHome.jpg" alt="Thumb do vídeo">
+        <img src="assets/bgHome.webp" alt="Thumb do vídeo">
         
       </a>
     </div>
@@ -299,9 +299,9 @@
             <strong> Excelência:</strong> como princípio inegociável em tudo o que fazemos.<br/><br/>
             
             <strong>Integridade:</strong> transparência e ética em cada decisão e relacionamento.<br/><br/>
-            <strong>Respeito: </strong>valorização das pessoas e criação de um ambiente seguro, inclusivo e colaborativo. Foco no Cliente: cada projeto é guiado pelo que realmente agrega valor.<br/><br/>
+            <strong>Respeito: </strong>valorização das pessoas e criação de um ambiente seguro, inclusivo e colaborativo.Foco no Cliente: cada projeto é guiado pelo que realmente agrega valor.<br/><br/>
 
-            <strong>Inovação </strong> busca constante por diferenciação e projetos em mercados inexplorados. Coletividade e Autonomia: mais respeito, menos hierarquia, incentivando iniciativa e colaboração.
+            <strong>Inovação </strong> busca constante por diferenciação e projetos em mercados inexplorados.Coletividade e Autonomia: mais respeito, menos hierarquia, incentivando iniciativa e colaboração.
             <br/><br/><strong>Autenticidade: </strong>assimetria em relação à concorrência, mantendo nossa identidade única.
         </p>
       </article>
