--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   ======================================================== -->
   <section id="home" class="hero">
     <!-- Imagem de fundo (troque pela sua) -->
-    <div class="hero__bg" style="background-image:url('assets/bgHome.webp');"></div>
+    <div class="hero__bg" fetchpriority="high" style="background-image:url('assets/bgHome.webp');"></div>
 
     <div class="container hero__grid">
       <!-- Texto -->
