--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <a href="#inscricoes">Inscrições</a>
         <a target="_blank" href="https://blueoceaneventos.com.br/gasenergyweek/">Gasenergyweek</a>
         <a target="_blank" href="https://blueoceaneventos.com.br/oemenergy/">O&M energy</a>
-        <a href="#projetos">Projetos Online</a>
+        <a href="./peojetos.html">Projetos Online</a>
       </nav>
 
       <a class="btn btn--outline" href="#contato">Entre em contato</a>
